Fix a problem on OTP18.3. Add xref to travis tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,9 @@ otp_release:
   - 18.0
   - 17.4
 sudo: false
-script: make test
+script:
+  - make test
+  - make xref
 jobs:
   include:
     - stage: deploy
