--- a/rebar.config
+++ b/rebar.config
@@ -2,3 +2,7 @@
     {platform_define, "^(19|2)", rand_only},
     {platform_define, "^(R|1|20)", fun_stacktrace}
 ]}.
+
+{xref_checks, [undefined_function_calls,
+               locals_not_used,
+               deprecated_function_calls]}.
