--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 language: erlang
-otp_release:
-  - 21.1
-  - 20.2
-  - 19.3
-  - 18.0
-  - 17.4
+matrix:
+    include:
+      - otp_release: 21.3
+      - otp_release: 20.3
+      - otp_release: 19.3
+      - otp_release: 18.3
+        dist: trusty
+      - otp_release: 17.4
+        dist: trusty
 sudo: false
 script:
   - make test
