--- a/rebar.config
+++ b/rebar.config
@@ -6,3 +6,7 @@
 {xref_checks, [undefined_function_calls,
                locals_not_used,
                deprecated_function_calls]}.
+
+{edoc_opts, [
+    {preprocess, true}
+]}.
