Add documentation, option to rebar config
Provide more information about function definitons of depcache API.
Add EDoc options to API documentation (tune CSS styles, add overview file). Add new folder doc_src which contains additional files for documentation generation.
Implement overload option of EDoc.
Show hidden documetation by providing rebar3 option - add additional profile for EDoc private documentation.
Separate some functions to make the code easier to read.
Tunie Makefile: add command for edoc, clean; add new command edoc_private

--- a/rebar.config
+++ b/rebar.config
@@ -8,5 +8,13 @@
                deprecated_function_calls]}.
 
 {edoc_opts, [
-    {preprocess, true}
+    {dir, "doc"}, {preprocess, true}, {stylesheet, "style.css"}, {title, "depcache"}, {application, depcache}
+]}.
+
+{profiles, [
+	{edoc_private, [
+		{edoc_opts, [
+			{private, true}
+		]}
+	]}
 ]}.
