--- a/rebar.config
+++ b/rebar.config
@@ -20,6 +20,11 @@
 		]}
 	]},
 	{test, [
-        {deps, [{proper, "1.3.0"}]}
+	    {dialyzer, [
+          {warnings, [
+              no_return
+          ]}
+        ]},
+        {deps, [{proper, "1.4.0"}]}
     ]}
 ]}.
