Simplify documentation generation and testing

--- a/rebar.config
+++ b/rebar.config
@@ -25,6 +25,8 @@
               no_return
           ]}
         ]},
-        {deps, [{proper, "1.4.0"}]}
+        {deps, [{proper, "1.4.0"}]},
+		{erl_opts, [{platform_define, "^20",
+                'OTP_GREATER_THAN_20'}]}
     ]}
 ]}.
