--- a/rebar.config
+++ b/rebar.config
@@ -25,8 +25,6 @@
               no_return
           ]}
         ]},
-        {deps, [{proper, "1.4.0"}]},
-		{erl_opts, [{platform_define, "^20",
-                'OTP_GREATER_THAN_20'}]}
+        {deps, [{proper, "1.4.0"}]}
     ]}
 ]}.
