Mix style documentation
Add an option.
Documentation generation based on [hex.pm](https://hex.pm/) publishing documentation recomendations using [rebar3_ex_doc](https://hexdocs.pm/rebar3_ex_doc/readme.html) functionality.

--- a/rebar.config
+++ b/rebar.config
@@ -3,14 +3,12 @@
     {platform_define, "^(R|1|20)", fun_stacktrace}
 ]}.
 
-{project_plugins, [rebar3_proper]}.
-
 {xref_checks, [undefined_function_calls,
                locals_not_used,
                deprecated_function_calls]}.
 
 {edoc_opts, [
-    {dir, "doc"}, {preprocess, true}, {stylesheet, "style.css"}, {title, "depcache"}, {application, depcache}
+    {preprocess, true}, {stylesheet, "style.css"}
 ]}.
 
 {profiles, [
@@ -25,6 +23,26 @@
               no_return
           ]}
         ]},
+		{plugins, [
+            rebar3_proper
+        ]},
         {deps, [{proper, "1.4.0"}]}
     ]}
+]}.
+
+{project_plugins, [rebar3_hex, rebar3_ex_doc]}.
+
+{hex, [
+    {doc, #{provider => ex_doc}}
+]}.
+
+{ex_doc, [
+    {extras, [
+          {"README.md", #{title => "Overview"}},
+          {"LICENSE", #{title => "License"}}
+    ]},
+    {main, "README.md"},
+    {source_url, "https://github.com/zotonic/depcache"},
+    {assets, "assets"},
+    {api_reference, true}
 ]}.
