--- a/rebar.config
+++ b/rebar.config
@@ -19,6 +19,7 @@
 	]},
 	{test, [
 	    {dialyzer, [
+          {plt_extra_apps, [proper]},
           {warnings, [
               no_return
           ]}
