Supress dialyzer warnings about use of proper:setup/2

--- a/rebar.config
+++ b/rebar.config
@@ -19,7 +19,7 @@
 	]},
 	{test, [
 	    {dialyzer, [
-          {plt_extra_apps, [proper]},
+          {plt_extra_apps, [proper, eunit]},
           {warnings, [
               no_return
           ]}
